--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_95fc557bf247af9"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -31,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chromatic": "^11.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-storybook": "^0.8.0",
